--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div class="pricing-card">
+  <div class="card-header">
+
+	  <img src="img_girl.jpg"  width="400" height="300">
+    <h2>Pricing Card</h2>
+    
+  </div>
+  <div class="card-body">
+    <ul>
+		<li>Price: Rs.200</li>
+      <li>Description: Lorem ipsum dolor sit amet. Ut explicabo ratione 33 doloribus odio cum labore quaerat. </li>
+     
+    </ul>
+    <button>Buy Now</button>
+  </div>
+</div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
